--- a/refs.bib
+++ b/refs.bib
@@ -397,18 +397,26 @@
 }
 
 
-@article{holbrook2020bayesian,
-	title={Bayesian mitigation of spatial coarsening for a fairly flexible spatiotemporal Hawkes model},
+@article{holbrook2022bayesian,
+	title={Bayesian mitigation of spatial coarsening for a Hawkes model applied to gunfire, wildfire and viral contagion},
 	author={Holbrook, Andrew J and Ji, Xiang and Suchard, Marc A},
-	journal={arXiv preprint arXiv:2010.02994},
-	year={2020}
+	journal={The Annals of Applied Statistics},
+	volume={16},
+	number={1},
+	pages={573--595},
+	year={2022},
+	publisher={Institute of Mathematical Statistics}
 }
 
-@article{holbrook2021viral,
+@article{holbrook2022viral,
 	title={From viral evolution to spatial contagion: a biologically modulated Hawkes model},
 	author={Holbrook, Andrew J and Ji, Xiang and Suchard, Marc A},
-	journal={arXiv preprint arXiv:2103.03348},
-	year={2021}
+	journal={Bioinformatics},
+	volume={38},
+	number={7},
+	pages={1846--1856},
+	year={2022},
+	publisher={Oxford University Press}
 }
 
 
