just need discussion and general cleaning

--- a/refs.bib
+++ b/refs.bib
@@ -15,6 +15,23 @@
 	}
 }
 
+@article{wang2022quantum,
+	title={Quantum computing in a statistical context},
+	author={Wang, Yazhen and Liu, Hongzhi},
+	journal={Annual Review of Statistics and Its Application},
+	volume={9},
+	number={NaN},
+	year={2022},
+	publisher={Annual Reviews}
+}
+
+@article{lopatnikova2021introduction,
+	title={An Introduction to Quantum Computing for Statisticians},
+	author={Lopatnikova, Anna and Tran, Minh-Ngoc},
+	journal={arXiv preprint arXiv:2112.06587},
+	year={2021}
+}
+
 @article{yoder2014fixed,
 	title={Fixed-point quantum search with an optimal number of queries},
 	author={Yoder, Theodore J and Low, Guang Hao and Chuang, Isaac L},
