--- a/main.tex
+++ b/main.tex
@@ -272,7 +272,7 @@ While parallel MCMC algorithms are increasingly well-suited for developing many-
 Quantum computers use quantum mechanics to store information and manipulate data. By leveraging the idiosyncracies of quantum physics, these computers are able to deliver speedups over conventional computing for a relatively small number of computational problems. Some of these speedups are very large. Quantum computers can achieve \emph{exponential} speedups over conventional computers for some computational tasks..  Shor's quantum algorithm for factoring an integer $N$ \citep{shor} is polynomial in $\log N$ compared to a super-polynomial classical optimum. The HHL algorithm for solving sparse $N$-dimensional linear systems \citep{harrow2009quantum} is $\order{\log N}$ compared to a classical $\order{N}$. Other algorithms deliver a still impressive \emph{polynomial} speedup.  For example, the algorithms considered in the following (Section \ref{sec:qmin}) achieve quadratic speedups over conventional computing, turning  $\order{N}$ runtimes into $\mathcal{O}(\sqrt{ N})$.  
  Both the magnitude of quantum computing's successes and the relative rarity of those successes mean that there is a general interest in leveraging quantum algorithms for previously unconsidered computational problems.  We will show that---with the help of the Gumbel-max trick (Section \ref{sec:gm})---established quantum optimization techniques are actually useful for sampling from computationally expensive discrete distributions and apply this insight to achieving quadratic speedups for parallel MCMC. 
 
-In the following section, we provide a \emph{very} short introduction to the most basic elements of quantum computing. The interested reader may look to \citet{nielsen2002quantum} for a canonical introduction to quantum algorithms and their implementation.
+We provide a short introduction to the most basic elements of quantum computing in Appendix \ref{sec:shortIntro}. The interested reader may look to \citet{nielsen2002quantum} for a canonical introduction to quantum algorithms or \citet{lopatnikova2021introduction,wang2022quantum} for surveys geared toward statisticians.   In Section \ref{sec:qSearch}, we review and compare three different quantum search algorithms that enjoy quadratic speedups over conventional algorithms.  In Section \ref{sec:qmin} we review the quantum minimization algorithm of \citet{durr1996quantum} and investigate the use of warm-starting therein.  We then review the Gumbel-max trick (Section \ref{sec:gm}) and recent insights in parallel MCMC (Section \ref{sec:sym}) before combining these ideas with quantum minimization to create the quantum parallel MCMC algorithm. 
 
 
 
@@ -460,7 +460,7 @@ x_0 = \argmin_{x\in\{0,\dots,N-1\}} f(x) \, .
 
 
 \begin{prop}[Warm-starting]\label{prop:warm}
-	Suppose that the quantum minimization algorithm begins with a threshold $F_0$ such that $f(x)<F_0$ for only $K-1$ items. Then the expected total number of time steps to find the minimizer is bounded above by
+	Suppose that the quantum minimization algorithm begins with a threshold $F_0$ such that $f(x)<F_0$ for only $K-1>0$ items. Then the expected total number of time steps to find the minimizer is bounded above by
 	\begin{align*}
 	m_0^K = \left(\frac{5}{4} - \frac{1}{\sqrt{K-1}} \right) 9\sqrt{N} + \frac{7}{10} \log_2(K) \log_2(N) \, ,
 	\end{align*}
@@ -493,7 +493,7 @@ In practice, the number of time steps before finding the minimum is surprisingly
 	\caption{Total number of oracle evaluations required by quantum minimization algorithm \citep{durr1996quantum} for different starting ranks and search set sizes $N$ from 500 independent simulations each.  Here, less than 1\% of the 12,500 instances fail to recover the true minimum on account of early stopping.}\label{fig:qMinAlg}
 \end{figure}
 
-\section{Quantum parallel MCMC}
+\section{Quantum parallel MCMC}\label{sec:qpmcmc}
 
 With the rudiments of quantum minimization in hand, we present a quantum parallel MCMC (QPMCMC). The general structure of the algorithm the same as Algorithm \ref{alg:pMCMC}: it constructs a Markov chain by iterating between generating many proposals and randomly selecting new Markov chain states among these proposals.  Unlike classical single-proposal MCMC, parallel MCMC proposes many states and chooses one according to the generalized acceptance probabilities of Equation \eqref{eq:probs}.
  In general MCMC, evaluation of the target density function $\pi(\cdot)$ is the rate-limiting computational step, becoming particularly onerous in big data scenarios \citep{massive}.  While parallel MCMC benefits from improved mixing as a function of MCMC iterations, the increased computational burden of $P$ target evaluations at each step can lead to less favorable comparisons when accounting for elapsed wall-clock time.
@@ -608,7 +608,7 @@ and that the simplified acceptance probabilities \eqref{eq:probsSimp} maintain d
  	\vspace{3em}
 	\centering
 	\includegraphics[width=0.9\linewidth]{mcmcIterations.pdf}
-	\caption{Total number of oracle evaluations required for each of 2,000 parallel MCMC iterations. In total, the combined MCMC runs required roughly $7$\% of the usual 20 million target evaluations. Over  99.4\% of the 10,000 MCMC iterations successfully sampled from the discrete distribution with probabilities of Equation \eqref{eq:probs}. Burn-in evaluations require moderately more evaluations because the current state occupies a lower density region and represents a `less good' warm-start.}\label{fig:mcmcIterations}
+	\caption{Total number of oracle evaluations required for each of 2,000 parallel MCMC iterations. In total, the combined MCMC runs required roughly $7$\% of the usual 20 million target evaluations. Over  99.4\% of the 10,000 MCMC iterations successfully sampled from the discrete distribution with probabilities of Equation \eqref{eq:probs}. Burn-in iterations require moderately more evaluations because the current state occupies a lower density region and represents a `less good' warm-start.}\label{fig:mcmcIterations}
 \end{figure}
 
 
