small edits plus kth rank experiment

--- a/refs.bib
+++ b/refs.bib
@@ -15,6 +15,24 @@
 	}
 }
 
+@misc{glatt,
+	doi = {10.48550/ARXIV.2209.04750},
+	
+	url = {https://arxiv.org/abs/2209.04750},
+	
+	author = {Glatt-Holtz, Nathan E. and Holbrook, Andrew J. and Krometis, Justin A. and Mondaini, Cecilia F.},
+	
+	keywords = {Computation (stat.CO), Probability (math.PR), Statistics Theory (math.ST), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Mathematics, FOS: Mathematics, 62D05, 60J22, 65C05, 65Y05},
+	
+	title = {Parallel MCMC Algorithms: Theoretical Foundations, Algorithm Design, Case Studies},
+	
+	publisher = {arXiv},
+	
+	year = {2022},
+	
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
 @article{wang2022quantum,
 	title={Quantum computing in a statistical context},
 	author={Wang, Yazhen and Liu, Hongzhi},
