reviewer and ae comments written down

--- a/refs.bib
+++ b/refs.bib
@@ -15,6 +15,41 @@
 	}
 }
 
+
+
+
+
+
+
+
+
+@article{montanaro,
+	author = {Montanaro, Ashley },
+	title = {Quantum speedup of Monte Carlo methods},
+	journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+	volume = {471},
+	number = {2181},
+	pages = {20150301},
+	year = {2015},
+	doi = {10.1098/rspa.2015.0301},
+	
+	URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rspa.2015.0301},
+	eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rspa.2015.0301}
+	,
+	abstract = { Monte Carlo methods use random sampling to estimate numerical quantities which are hard to compute deterministically. One important example is the use in statistical physics of rapidly mixing Markov chains to approximately compute partition functions. In this work, we describe a quantum algorithm which can accelerate Monte Carlo methods in a very general setting. The algorithm estimates the expected output value of an arbitrary randomized or quantum subroutine with bounded variance, achieving a near-quadratic speedup over the best possible classical algorithm. Combining the algorithm with the use of quantum walks gives a quantum speedup of the fastest known classical algorithms with rigorous performance bounds for computing partition functions, which use multiple-stage Markov chain Monte Carlo techniques. The quantum algorithm can also be used to estimate the total variation distance between probability distributions efficiently. }
+}
+
+@article{wocjan2008speedup,
+	title={Speedup via quantum sampling},
+	author={Wocjan, Pawel and Abeyesinghe, Anura},
+	journal={Physical Review A},
+	volume={78},
+	number={4},
+	pages={042336},
+	year={2008},
+	publisher={APS}
+}
+
 @misc{glatt,
 	doi = {10.48550/ARXIV.2209.04750},
 	
@@ -496,6 +531,13 @@
 	number={10.1201},
 	year={2011},
 	publisher={Chapman \& Hall/CRC Boca Raton, FL}
+}
+
+@article{agrawal2021optimal,
+	title={Optimal scaling of MCMC beyond Metropolis},
+	author={Agrawal, Sanket and Vats, Dootika and {\L}atuszy{\'n}ski, Krzysztof and Roberts, Gareth O},
+	journal={arXiv preprint arXiv:2104.02020},
+	year={2021}
 }
 
 @article{haario2001adaptive,
