--- a/main.tex
+++ b/main.tex
@@ -671,7 +671,7 @@ Finally, we compare convergence speed for QPMCMC using 1,000, 5,000 and 10,000 p
  \begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.7\linewidth]{Ising2dFig.pdf}
-	\caption{Convergence of log-probability statistic for a independence parallel MCMC samplers targeting an Ising model with uniform correlation $\lambda=1$ and no external field. Larger proposal counts allow discovery of higher probability configurations, albeit with diminishing returns.}\label{fig:ising2d}
+	\caption{Convergence of log-probability statistic for a independence parallel MCMC samplers targeting an Ising model with uniform correlation $\lambda=1$ and no external field. All chains begin at minimal probability `checkerboard' state. Larger proposal counts allow discovery of higher probability configurations, albeit with diminishing returns.}\label{fig:ising2d}
 \end{figure}
 
 
