--- a/main.tex
+++ b/main.tex
@@ -675,6 +675,14 @@ Finally, we compare convergence speed for QPMCMC using 1,000, 5,000 and 10,000 p
 \end{figure}
 
 
+\subsubsection{Bayesian image something}
+
+ \begin{figure}[!t]
+	\centering
+	\includegraphics[width=0.9\linewidth]{blackHole.png}
+	\caption{Convergence of log-probability statistic for a independence parallel MCMC samplers targeting an Ising model with uniform correlation $\lambda=1$ and no external field. All chains begin at minimal probability `checkerboard' state. Larger proposal counts allow discovery of higher probability configurations, albeit with diminishing returns.}\label{fig:blackHole}
+\end{figure}
+
 \subsection{Note on simulations}
 
 We use \textsc{R} \citep{rlang}, \textsc{Python} \citep{vanrossum1995python} and \textsc{TensorFlow} \citep{abadi2016tensorflow}  in our simulations and the \textsc{ggplot2} package to generate all figures \citep{ggplot}.  All simulations rely on the fact that the Grover iterations of Equation \eqref{eq:grov} manipulate the probability amplitudes in a deterministic manner. For example, the following \textsc{R} code specifies $N$ uniform probability amplitudes (\verb|sqrtProbs|), performs $I$ Grover iterations and measures a single state according to the resulting probabilities.
